still trying to fix events on mobile

--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -100,20 +100,20 @@
 
         h3 {
           font-size: 25px;
-          margin: 0 0 0 10px;
+          margin: 0 0 0 0px;
         }
 
         h4 {
-          margin: 0 0 0 10px;
+          margin: 0 0 0 0px;
         }
 
         span {
-          margin: 0 0 0 10px;
+          margin: 0 0 0 0px;
         }
 
         p {
           color: #8A9191;
-          margin: 10px 0 0 10px;
+          margin: 0px 0 0 0px;
         }
       }
     }
